# llm-wrapper-cli

./: AUTHORS.md  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: publish_to_pypi.yml  test_python.yml
docs/: agent.md  configuration.md  prompts.md  recipes.md
src/llm_cli/: __main__.py  client.py  context.py  inputs.py  llm_cli.py  prompts.py  session.py  tools.py
src/llm_cli/prompts/: bash.md  python.md
src/llm_cli/system_prompts/: python.md
src/llm_wrapper_cli/: __init__.py  __main__.py  client.py  inputs.py  prompts.py  session.py  tools.py
src/llm_wrapper_cli/agent_templates/: test_agent.yaml
src/llm_wrapper_cli/system_prompts/: analyze.md  naming.md
tests/: __init__.py  test_client.py  test_inputs.py  test_llm_cli.py  test_main.py  test_prompts.py  test_session.py  test_tools.py
