[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wrapper-cli"
version = "1.0.2"
description = "Quick way to access LLM output in CLI and run Code Agents"
readme = "README.md"
authors = [
  {name = "Louis Groux", email = "louis.cal.groux@gmail.com"}
]
maintainers = [
  {name = "Louis Groux", email = "louis.cal.groux@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "transformers",
  "smolagents",
  "markitdown"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "pytest-cov",
    "ruff"  # linting
]

[project.urls]
bugs = "https://github.com/Calomnie/llm-wrapper-cli/issues"
changelog = "https://github.com/Calomnie/llm-wrapper-cli/blob/master/CHANGELOG.md"
homepage = "https://github.com/Calomnie/llm-wrapper-cli"

[project.scripts]
llmc = "llm_wrapper_cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

